src/test/ui/nll/local-outlives-static-via-hrtb.stderr
warning: lifetime parameter `'this` never used
  --> $DIR/local-outlives-static-via-hrtb.rs:4:20
   |
LL | pub trait Outlives<'this> {}
   |                   -^^^^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error[E0597]: `local` does not live long enough
  --> $DIR/local-outlives-static-via-hrtb.rs:24:28
   |
LL |     assert_static_via_hrtb(&local);
   |     -----------------------^^^^^^-
   |     |                      |
   |     |                      borrowed value does not live long enough
   |     argument requires that `local` is borrowed for `'static`
LL |     assert_static_via_hrtb_with_assoc_type(&&local);
LL | }
   | - `local` dropped here while still borrowed

error[E0597]: `local` does not live long enough
  --> $DIR/local-outlives-static-via-hrtb.rs:25:45
   |
LL |     assert_static_via_hrtb_with_assoc_type(&&local);
   |     ----------------------------------------^^^^^^-
   |     |                                       |
   |     |                                       borrowed value does not live long enough
   |     argument requires that `local` is borrowed for `'static`
LL | }
   | - `local` dropped here while still borrowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
